--- a/src/main/resources/static/web/assets/pages/account.html
+++ b/src/main/resources/static/web/assets/pages/account.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link rel="stylesheet" href="./web/assets/style/accounts.css">
-  <link rel="shortcut icon" href="./web/assets/images/favicon-bank.png" type="image/x-icon">
+  <link rel="stylesheet" href="../style/accounts.css">
+  <link rel="shortcut icon" href="../images/favicon-bank.png" type="image/x-icon">
   <title>Account | Brothers Mindhub</title>
 </head>
 
@@ -155,16 +155,16 @@
 
 
     <footer class="d-flex  align-items-center justify-content-around">
-      <img src="./web/assets/images/icon-bank.png" alt="logo" title="logo" class="logo">
+      <img src="../images/icon-bank.png" alt="logo" title="logo" class="logo">
       <p class="text-white">Brothers Mindhub</p>
 
       <div class="flex-wrap d-flex">
-        <a target="_blank" href="https://es-la.facebook.com/"><img src="./web/assets/images/facebook (2).png"
+        <a target="_blank" href="https://es-la.facebook.com/"><img src="../images/facebook%20(2).png"
             alt="facebook" title="Facebook" class="network-icon"></a>
-        <a target="_blank" href="https://web.whatsapp.com/"><img src="./web/assets/images/whatsapp (2).png"
+        <a target="_blank" href="https://web.whatsapp.com/"><img src="../images/whatsapp%20(2).png"
             alt="whatsapp" title="Whatsapp" class="network-icon"></a>
-        <a href="tel: +57123456789"><img src="./web/assets/images/phone.png" alt="callcenter" title="Call center"
-            class="network-icon"></a>
+        <a href="tel: +57123456789"><img src="../images/phone.png" alt="callcenter" title="Call center"
+                                         class="network-icon"></a>
       </div>
     </footer>
   </div>
@@ -175,7 +175,7 @@
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-  <script src="./web/assets/scripts/account.js"></script>
+  <script src="../scripts/account.js"></script>
 </body>
 
 </html>
