--- a/src/main/resources/static/web/assets/pages/account.html
+++ b/src/main/resources/static/web/assets/pages/account.html
@@ -121,9 +121,10 @@
         </div>
       </div>
 
-      <div class="mt-4 container text-light">
-        <table class="table table-bordered table-striped border border-danger">
-          <h2>Transaction Resume: </h2>
+     
+      <div class="mt-4 d-flex flex-column justify-content-center align-items-center table-responsive">
+        <h2 class="text-light">Transaction Resume: </h2>
+        <table class="table table-bordered table-striped border border-danger w-50">
           <thead>
             <tr>
               <th scope="col">Type</th>
@@ -151,11 +152,12 @@
           </tbody>
         </table>
       </div>
+
     </main>
 
 
     <footer class="d-flex  align-items-center justify-content-around">
-      <img src="../images/icon-bank.png" alt="logo" title="logo" class="logo">
+      <img src="../images/Mindhub Brothers-logos_transparent.png" alt="logo" title="logo" class="logo">
       <p class="text-white">Brothers Mindhub</p>
 
       <div class="flex-wrap d-flex">
