--- a/src/main/resources/static/web/assets/pages/accounts.html
+++ b/src/main/resources/static/web/assets/pages/accounts.html
@@ -194,7 +194,7 @@
     </div>
     <footer class="d-flex  align-items-center justify-content-around">
 
-        <img src="../images/icon-bank.png" alt="logo" title="logo" class="logo">
+        <img src="../images/Mindhub Brothers-logos_transparent.png" alt="logo" title="logo" class="logo">
         <p class="text-white">Brothers Mindhub</p>
 
         <div class="flex-wrap d-flex">
