--- a/src/main/resources/static/manager.html
+++ b/src/main/resources/static/manager.html
@@ -78,16 +78,19 @@
             </div>
         </main>
 
-        <footer class="d-flex  align-items-center justify-content-around">   
+        <footer class="d-flex  align-items-center justify-content-around">
             <img src="web/assets/images/icon-bank.png" alt="logo" title="logo" class="logo">
             <p class="text-white">Brothers Mindhub</p>
 
             <div class="flex-wrap d-flex">
-                <a target="_blank" href="https://es-la.facebook.com/"><img src="web/assets/images/facebook (2).png" alt="facebook" title="Facebook" class="network-icon"></a>
-                <a target="_blank" href="https://web.whatsapp.com/"><img src="web/assets/images/whatsapp (2).png" alt="whatsapp" title="Whatsapp" class="network-icon"></a>
-                <a  href="tel: +57123456789"><img src="web/assets/images/phone.png" alt="call-center" title="Call center" class="network-icon"></a>
-            </div>       
-    </footer>
+                <a target="_blank" href="https://es-la.facebook.com/"><img src="web/assets/images/facebook (2).png"
+                        alt="facebook" title="Facebook" class="network-icon"></a>
+                <a target="_blank" href="https://web.whatsapp.com/"><img src="web/assets/images/whatsapp (2).png"
+                        alt="whatsapp" title="Whatsapp" class="network-icon"></a>
+                <a href="tel: +57123456789"><img src="web/assets/images/phone.png" alt="call-center" title="Call center"
+                        class="network-icon"></a>
+            </div>
+        </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
