--- a/src/main/resources/static/web/admiPages/manager.html
+++ b/src/main/resources/static/web/admiPages/manager.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="./web/assets/style/style.css">
+    <link rel="stylesheet" href="../web/assets/style/style.css">
     <link rel="shortcut icon" href="./multimedia/Mindhub Brothers-logos.jpeg" type="image/x-icon">
     <title>Mindhub Brothers</title>
 </head>
@@ -13,7 +13,7 @@
 <body>
 <div id="app">
     <nav class="d-flex justify-content-between px-5 align-items-center">
-        <img src="./web/assets/images/Mindhub%20Brothers-logos.jpeg" alt="logo" title="Mindhub Brothers Bank" class="logo">
+        <img src="../web/assets/images/Mindhub%20Brothers-logos.jpeg" alt="logo" title="Mindhub Brothers Bank" class="logo">
         <button class="animated-button ">
             <span>Log out</span>
         </button>
@@ -86,7 +86,7 @@
 </div>
 
 <footer class="d-flex align-items-center justify-content-around">
-    <img src="./web/assets/images/Mindhub%20Brothers-logos.jpeg" alt="logo" title="Logo Mindhub Brothers" class="logo">
+    <img src="../web/assets/images/Mindhub%20Brothers-logos.jpeg" alt="logo" title="Logo Mindhub Brothers" class="logo">
     <div class="d-flex justify-content-center gap-3 text-light">
         <p>© All rights reserve to Karen Buitrago</p>
         <a target="_blank" href="https://github.com/KarenBuitrago2825">Github to see more projects</a>
