--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -9,10 +9,40 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./style/style.css">
+    <link rel="shortcut icon" href="Mindhub%20Brothers-logos.jpeg" type="image/x-icon">
     <title>Main app</title>
   </head>
   <body>
-    <h1>Main Page</h1>
+  <main class="container col-lg-5">
+    <form class="rounded-4 px-5 py-4">
+      <h3 class="text-center">Have an account?</h3>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email</label>
+        <input
+                type="email"
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                placeholder="Email"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <input
+                type="password"
+                class="form-control"
+                id="exampleInputPassword1"
+                placeholder="Password"
+        />
+      </div>
+      <button type="submit" class="btn text-white">Sign in</button>
+
+      <div class="form-text mt-4">
+        <p>Don't have an account yet? <a href="./register.html">Register here!</a></p>
+      </div>
+    </form>
+  </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
