--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -9,41 +9,53 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./style/style.css">
-    <link rel="shortcut icon" href="Mindhub%20Brothers-logos.jpeg" type="image/x-icon">
+    <link rel="stylesheet" href="./style/style.css" />
+    <link
+      rel="shortcut icon"
+      href="Mindhub%20Brothers-logos.jpeg"
+      type="image/x-icon"
+    />
     <title>Main app</title>
   </head>
   <body>
-  <main class="container col-lg-5">
-    <form class="rounded-4 px-5 py-4">
-      <h3 class="text-center">Have an account?</h3>
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email</label>
-        <input
-                type="email"
-                class="form-control"
-                id="exampleInputEmail1"
-                aria-describedby="emailHelp"
-                placeholder="Email"
-        />
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input
-                type="password"
-                class="form-control"
-                id="exampleInputPassword1"
-                placeholder="Password"
-        />
-      </div>
-      <button type="submit" class="btn text-white">Sign in</button>
+    <div id="app">
+      <main class="container col-lg-5">
+        <form class="rounded-4 px-5 py-4">
+          <h3 class="text-center">Have an account?</h3>
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              aria-describedby="emailHelp"
+              placeholder="Email"
+              v-model="email"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label"
+              >Password</label
+            >
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              placeholder="Password"
+              v-model="password"
+            />
+          </div>
+          <button type="button" class="btn text-white" @click="login">Sign in</button>
 
-      <div class="form-text mt-4">
-        <p>Don't have an account yet? <a href="./register.html">Register here!</a></p>
-      </div>
-    </form>
-  </main>
-
+          <div class="form-text mt-4">
+            <p>
+              Don't have an account yet?
+              <a href="./register.html">Register here!</a>
+            </p>
+          </div>
+        </form>
+      </main>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
@@ -51,5 +63,7 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
