--- a/src/main/resources/static/web/assets/pages/cards.html
+++ b/src/main/resources/static/web/assets/pages/cards.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="#">TRANSACTION</a>
                         </li>
                         <li class="nav-item">
-                            <button class="button">
+                            <button class="button" @click.prevent="logOut">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                                     <path stroke-linecap="round" stroke-linejoin="round"
