--- a/src/main/resources/static/web/register.html
+++ b/src/main/resources/static/web/register.html
@@ -10,6 +10,10 @@
       crossorigin="anonymous"
     />
     <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.27/dist/sweetalert2.min.css"
+    />
+    <link
       rel="shortcut icon"
       href="images/Mindhub%20Brothers-logos.jpeg"
       type="image/x-icon"
@@ -18,61 +22,80 @@
     <title>Register | Mindhub Brothers</title>
   </head>
   <body>
-    <main class="container col-lg-5">
-      <form class="rounded-4 px-5 py-4">
-        <h3 class="text-center">Register your account</h3>
-        <div class="mb-3">
-          <label for="name" class="form-label">First Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="name"
-            placeholder="First name"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="lastname" class="form-label">Last Name</label>
-          <input
-            type="text"
-            class="form-control"
-            id="lastname"
-            placeholder="Last name"
-          />
-        </div>
+    <div id="app">
+      <main class="container col-lg-5 mt-5">
+        <form class="rounded-4 px-5 py-4">
+          <h3 class="text-center">Register your account</h3>
+          <div class="mb-3">
+            <label for="name" class="form-label">First Name</label>
+            <input
+              required=""
+              type="text"
+              class="form-control"
+              id="name"
+              placeholder="First name"
+              v-model="firstName"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="lastname" class="form-label">Last Name</label>
+            <input
+              required=""
+              type="text"
+              class="form-control"
+              id="lastname"
+              placeholder="Last name"
+              v-model="lastName"
+            />
+          </div>
 
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label"
-            >Email</label
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email</label>
+            <input
+              required=""
+              type="email"
+              class="form-control"
+              id="exampleInputEmail1"
+              aria-describedby="emailHelp"
+              placeholder="Email"
+              v-model="email"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label"
+              >Password</label
+            >
+            <input
+              required=""
+              type="password"
+              class="form-control"
+              id="exampleInputPassword1"
+              placeholder="Password"
+              v-model="password"
+            />
+          </div>
+          <button
+            type="submit"
+            class="btn text-white"
+            @click.prevent="register"
           >
-          <input
-            type="email"
-            class="form-control"
-            id="exampleInputEmail1"
-            aria-describedby="emailHelp"
-            placeholder="Email"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input
-            type="password"
-            class="form-control"
-            id="exampleInputPassword1"
-            placeholder="Password"
-          />
-        </div>
-        <button type="submit" class="btn text-white">Register</button>
+            Register
+          </button>
 
-        <div class="form-text mt-4">
-          <p>Have an account? <a href="./index.html">Sign in here!</a></p>
-        </div>
-      </form>
-    </main>
+          <div class="form-text mt-4">
+            <p>Have an account? <a href="./index.html">Sign in here!</a></p>
+          </div>
+        </form>
+      </main>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.27/dist/sweetalert2.all.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <script src="index.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
