--- a/src/main/resources/static/web/assets/pages/accounts.html
+++ b/src/main/resources/static/web/assets/pages/accounts.html
@@ -83,6 +83,8 @@
                             History</a>
                     </div>
                 </template>
+
+                <button class="createAccount"> Create new account </button>
             </div>
 
             <div class="mt-4 container">
@@ -112,7 +114,6 @@
                         </tr>
                     </tbody>
                 </table>
-
             </div>
         </main>
 
