--- a/src/main/resources/static/web/assets/pages/account.html
+++ b/src/main/resources/static/web/assets/pages/account.html
@@ -26,18 +26,18 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
           <ul class="navbar-nav ms-auto gap-3">
             <li class="nav-item">
-              <a class="nav-link active" href="./accounts.html">ACCOUNTS
+              <a class="nav-link active" href="#">ACCOUNTS
                 <span class="visually-hidden">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">CARDS</a>
+              <a class="nav-link" href="./cards.html">CARDS</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">LOANS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">TRANSACTION</a>
+              <a class="nav-link" href="./transfers.html">TRANSACTION</a>
             </li>
             <li class="nav-item">
               <button class="button" @click.prevent="logOut">
