--- a/src/main/resources/static/web/assets/pages/accounts.html
+++ b/src/main/resources/static/web/assets/pages/accounts.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="#">LOANS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">TRANSACTION</a>
+                            <a class="nav-link" href="./transfers.html">TRANSACTION</a>
                         </li>
                         <li class="nav-item">
                             <button class="button" @click.prevent="logOut">
