--- a/src/main/resources/static/web/assets/pages/transfers.html
+++ b/src/main/resources/static/web/assets/pages/transfers.html
@@ -18,101 +18,282 @@
     <title>Transfers | Mindhub Brothers</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg" data-bs-theme="dark" id="bg-nav">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"
-          ><img
-            src="../images/Mindhub Brothers-logos.jpeg"
-            alt="logo"
-            title="Logo Mindhub Brothers"
-            class="logo-mb rounded-circle"
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarColor01"
-          aria-controls="navbarColor01"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarColor01">
-          <ul class="navbar-nav ms-auto gap-3">
-            <li class="nav-item">
-              <a class="nav-link" href="./accounts.html"
-                >ACCOUNTS
-                <span class="visually-hidden">(current)</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./cards.html">CARDS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">LOANS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link fw-bold" href="#">TRANSACTION</a>
-            </li>
-            <li class="nav-item">
-              <button class="button">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="w-6 h-6"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75"
-                  ></path>
-                </svg>
-                <div class="text">Log out</div>
-              </button>
-            </li>
-          </ul>
+    <div id="app">
+      <nav class="navbar navbar-expand-lg" data-bs-theme="dark" id="bg-nav">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+            ><img
+              src="../images/Mindhub Brothers-logos.jpeg"
+              alt="logo"
+              title="Logo Mindhub Brothers"
+              class="logo-mb rounded-circle"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarColor01"
+            aria-controls="navbarColor01"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarColor01">
+            <ul class="navbar-nav ms-auto gap-3">
+              <li class="nav-item">
+                <a class="nav-link" href="./accounts.html"
+                  >ACCOUNTS
+                  <span class="visually-hidden">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="./cards.html">CARDS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">LOANS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link fw-bold" href="#">TRANSACTION</a>
+              </li>
+              <li class="nav-item">
+                <button class="button">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="w-6 h-6"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M4.5 12h15m0 0l-6.75-6.75M19.5 12l-6.75 6.75"
+                    ></path>
+                  </svg>
+                  <div class="text">Log out</div>
+                </button>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
 
-    <header>
-      <h1 class="text-light text-center">Welcome to your Transfers</h1>
-    </header>
+      <header>
+        <h1 class="text-light text-center">Welcome to your Transfers</h1>
+      </header>
 
-    <main class="my-5">
-      <div  class="container bg-warning rounded-4 p-2">
-        <section class=" d-flex align-items-center justify-content-evenly">
-          <h2>Destination:</h2>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="flexRadioDefault"
-              id="flexRadioDefault1"
-            />
-            <label class="form-check-label" for="flexRadioDefault1">
-              Own Accounts
-            </label>
+      <main class="my-5">
+        <div
+          class="container bg-warning rounded-4 p-2"
+        >
+          <section class="d-flex align-items-center justify-content-evenly">
+            <h2>Destination:</h2>
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="flexRadioDefault"
+                id="flexRadioDefault1"
+                @change="showOwnAccounts"
+                checked
+              />
+              <label class="form-check-label" for="flexRadioDefault1">
+                Own Accounts
+              </label>
+            </div>
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="flexRadioDefault"
+                id="flexRadioDefault1"
+                @change="showExternalAccounts"
+              />
+              <label class="form-check-label" for="flexRadioDefault1">
+                External Accounts
+              </label>
+            </div>
+          </section>
+
+          <div
+            class="d-flex justify-content-center flex-column align-items-center"
+          >
+            <form class="form-horizontal" v-if="form1">
+              <fieldset>
+                <!-- Form Name -->
+                <legend>Own accounts</legend>
+
+                <!-- Select Multiple -->
+                <div class="form-group">
+                  <label class=" control-label" for="selectmultiple"
+                    >From:</label
+                  >
+                  <div class="">
+                    <select
+                      id="selectmultiple"
+                      name="selectmultiple"
+                      class="form-control"
+                      multiple="multiple"
+                      v-model="originAccount"
+                      required=""
+                    >
+                    <template v-for="account in accounts">
+                      <option :value="account.number">{{account.number}}</option>
+                    </template>
+                    </select>
+                  </div>
+                </div>
+
+                <!-- Select Multiple -->
+                <div class="form-group">
+                  <label class="control-label" for="selectmultiple"
+                    >To:</label
+                  >
+                  <div class="">
+                    <select
+                      id="selectmultiple"
+                      name="selectmultiple"
+                      class="form-control"
+                      multiple="multiple"
+                      v-model="destinationAccount"
+                      required=""
+                    >
+                    <template v-for="account in accounts">
+                      <option :value="account.number">{{account.number}}</option>
+                    </template>
+                    </select>
+                  </div>
+                </div>
+
+                <!-- Text input-->
+                <div class="form-group">
+                  <label class=" control-label" for="textinput"
+                    >Amount</label
+                  >
+                  <div class="">
+                    <input
+                      id="textinput"
+                      name="textinput"
+                      type="text"
+                      placeholder="Amount"
+                      class="form-control input-md"
+                      required=""
+                      v-model="amount"
+                      
+                    />
+                  </div>
+                </div>
+
+                <!-- Text input-->
+                <div class="form-group">
+                  <label class=" control-label" for="textinput"
+                    >Description</label
+                  >
+                  <div class="">
+                    <input
+                      id="textinput"
+                      name="textinput"
+                      type="text"
+                      placeholder="Description"
+                      class="form-control input-md"
+                      required=""
+                      v-model="description"
+                    />
+                  </div>
+                </div>
+              </fieldset>
+            </form>
+            <!--External form-->
+            <form class="form-horizontal" v-if="form2">
+              <fieldset>
+                <!-- Form Name -->
+                <legend>External accounts</legend>
+
+                <!-- Text input-->
+                <div class="form-group">
+                  <label class=" control-label" for="textinput"
+                    >Number Account</label
+                  >
+                  <div class="">
+                    <input
+                      id="textinput"
+                      name="textinput"
+                      type="text"
+                      placeholder="Number"
+                      class="form-control input-md"
+                      required=""
+                      v-model="destinationAccount"
+                    />
+                  </div>
+                </div>
+
+                <!-- Select Multiple -->
+                <div class="form-group">
+                  <label class=" control-label" for="selectmultiple"
+                    >To:</label
+                  >
+                  <div class="">
+                    <select
+                      id="selectmultiple"
+                      name="selectmultiple"
+                      class="form-control"
+                      multiple="multiple"
+                      v-model="originAccount"
+                      required=""
+                    >
+                    <template v-for="account in accounts">
+                      <option :value="account.number">{{account.number}}</option>
+                    </template>
+
+                    </select>
+                  </div>
+                </div>
+
+                <!-- Text input-->
+                <div class="form-group">
+                  <label class=" control-label" for="textinput"
+                    >Amount</label
+                  >
+                  <div class="">
+                    <input
+                      id="textinput"
+                      name="textinput"
+                      type="text"
+                      placeholder="Amount"
+                      class="form-control input-md"
+                      required=""
+                      v-model="amount"
+                    />
+                  </div>
+                </div>
+
+                <!-- Text input-->
+                <div class="form-group">
+                  <label class="control-label" for="textinput"
+                    >Description</label
+                  >
+                  <div class="">
+                    <input
+                      id="textinput"
+                      name="textinput"
+                      type="text"
+                      placeholder="Description"
+                      class="form-control input-md"
+                      required=""
+                      v-model="description"
+                    />
+                  </div>
+                </div>
+              </fieldset>
+            </form>
+
+            <button type="button" class="btn btn-success my-2" @click.prevent="transfer">Transfer</button>
           </div>
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="flexRadioDefault"
-              id="flexRadioDefault2"
-            />
-            <label class="form-check-label" for="flexRadioDefault2">
-              External Accounts
-            </label>
-          </div>
-        </section>
-      </div>
-    </main>
-
+        </div>
+      </main>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
