Se añade services de client

--- a/src/main/resources/static/web/admiPages/manager.html
+++ b/src/main/resources/static/web/admiPages/manager.html
@@ -39,7 +39,7 @@
           </button>
         </nav>
         <section class="text-light rounded-4 p-2 mx-2" id="section-header">
-          <h1>WELCOME MANAGER</h1>
+          <h1>WELCOME MANAGER | MindHub Brothers</h1>
           <h3>
             Below you can see the administration of the Mindhub Brothers bank
           </h3>
@@ -94,6 +94,7 @@
               Add Client
             </button>
           </form>
+          
           <div class="mt-5">
             <table
               class="table table-bordered table-striped border border-primary"
