--- a/src/main/resources/static/web/assets/pages/cards.html
+++ b/src/main/resources/static/web/assets/pages/cards.html
@@ -34,7 +34,7 @@
                             <a class="nav-link active fw-bold" href="#">CARDS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">LOANS</a>
+                            <a class="nav-link" href="./loans-application.html">LOANS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./transfers.html">TRANSACTION</a>
