--- a/src/main/resources/static/web/assets/pages/transfers.html
+++ b/src/main/resources/static/web/assets/pages/transfers.html
@@ -56,8 +56,8 @@
       <h1 class="text-light text-center">Welcome to your Transfers</h1>
     </header>
 
-    <main class="my-5">
-      <div class="container bg-warning rounded-4 p-2">
+    <main class="my-5 mx-md- text-light container rounded-4" id="form-loans">
+      <div class="container rounded-4 p-2" >
         <section class="d-flex align-items-center justify-content-evenly">
           <h2>Destination:</h2>
           <div class="form-check">
