--- a/src/main/resources/static/web/assets/pages/loans-application.html
+++ b/src/main/resources/static/web/assets/pages/loans-application.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <ul class="navbar-nav ms-auto gap-3">
                         <li class="nav-item">
-                            <a class="nav-link  " href="./accounts.html">ACCOUNTS
+                            <a class="nav-link" href="./accounts.html">ACCOUNTS
                                 <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
@@ -55,14 +55,66 @@
             </div>
         </nav>
         <header>
-            <h1 class="text-light text-center">
-                Welcome to Laon Application 
-            </h1>
+            <h1 class="text-light text-center">Welcome to Laon Application</h1>
         </header>
 
-       <main>
+        <main>
+            <form class="form-horizontal container p-3 rounded-4 my-5 text-light justify-content-center d-flex"
+                id="form-loans">
+                <fieldset>
+                    <!-- Form Name -->
+                    <legend>Ask for a loan</legend>
 
-       </main>
+                    <!-- Select Basic -->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="selectbasic">Select Loan</label>
+                        <div class="col-md-12">
+                            <select id="selectbasic" name="selectbasic" class="form-control"
+                                @change="filterLoansPayments" v-model="selectedLoan">
+                                <template v-for="loan in loans">
+                                    <option :value="loan.id">{{loan.name}}</option>
+                                </template>
+                            </select>
+                        </div>
+                    </div>
+
+                    <!-- Select Basic -->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="selectbasic">Origin Account</label>
+                        <div class="col-md-12">
+                            <select id="selectbasic" name="selectbasic" class="form-control" v-model="originAccount">
+                                <template v-for="account in accounts">
+                                    <option :value="account.number">{{account.number}}</option>
+                                </template>
+                            </select>
+                        </div>
+                    </div>
+
+                    <!-- Text input-->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="amount">Amount</label>
+                        <div class="col-md-12">
+                            <input id="amount" name="amount" type="text" placeholder="$$$" class="form-control input-md"
+                                required="" v-model="amount" />
+                        </div>
+                    </div>
+
+                    <!-- Select Basic -->
+                    <div class="form-group">
+                        <label class="col-md-4 control-label" for="payments">Payments</label>
+                        <div class="col-md-12">
+                            <select id="payments" name="payments" class="form-control" v-model="payments">
+                                <template v-for="payment in filterPayments.payments">
+                                    <option :value="payment">{{payment}}</option>
+                                </template>
+                            </select>
+                        </div>
+                    </div>
+
+                    <button type="submit" @click.prevent="sendLoan"  @click.prevent="logOut" class="btn btn-success my-3 texte-center">Send loan</button>
+                </fieldset>
+            </form>
+        </main>
 
         <footer class="d-flex flex-column justify-content-center align-items-center p-2 text-center">
             <p class="text-light">
@@ -88,9 +140,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.27/dist/sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="../scripts/accounts.js"></script>
+    <script src="../scripts/loans-applications.js"></script>
 </body>
 
 </html>
