--- a/src/main/resources/static/web/register.html
+++ b/src/main/resources/static/web/register.html
@@ -14,8 +14,12 @@
 
 <body>
   <div id="app">
-    <main class="container col-lg-5 mt-5">
-      <form class="rounded-4 px-5 py-4">
+    <header>
+      <h1 class="text-light text-center">MINDHUB BROTHERS | REGISTER</h1>
+    </header>
+    <main class="align-items-center justify-content-evenly mt-5 flex-wrap d-flex">
+      <img src="./images/register.png" alt="register" class="col-4">
+      <form class="rounded-4 px-5 py-4 col-md-6">
         <h3 class="text-center">Register your account</h3>
         <div class="mb-3">
           <label for="name" class="form-label">First Name</label>
