--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -1,71 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./style/style.css" />
-    <link
-      rel="shortcut icon"
-      href="./images/Mindhub Brothers-logos.jpeg"
-      type="image/x-icon"
-    />
-    <title>Sign in | Mindhub Brothers</title>
-  </head>
-  <body>
-    <div id="app">
-      <main class="container col-lg-5 mt-5">
-        <form class="rounded-4 px-5 py-4">
-          <h3 class="text-center">Have an account?</h3>
-          <div class="mb-3">
-            <label for="email" class="form-label">Email</label>
-            <input
-              required=""
-              type="email"
-              class="form-control"
-              id="email"
-              aria-describedby="emailHelp"
-              placeholder="Email"
-              v-model="email"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="password" class="form-label">Password</label>
-            <input
-              required=""
-              type="password"
-              class="form-control"
-              id="password"
-              placeholder="Password"
-              v-model="password"
-            />
-          </div>
-          <button type="button" class="btn text-white" @click="login">
-            Sign in
-          </button>
 
-          <div class="form-text mt-4">
-            <p>
-              Don't have an account yet?
-              <a href="./register.html">Register here!</a>
-            </p>
-          </div>
-        </form>
-      </main>
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    <script src="./index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./style/style.css" />
+  <link rel="shortcut icon" href="./images/Mindhub Brothers-logos.jpeg" type="image/x-icon" />
+  <title>Sign in | Mindhub Brothers</title>
+</head>
+
+<body>
+  <div id="app">
+    <header>
+      <h1 class="text-light text-center">MINDHUB BROTHERS | LOG IN</h1>
+    </header>
+    <main class="align-items-center justify-content-evenly mt-5 d-flex flex-wrap ">
+
+      <img src="./images/log-in.png" alt="log-in" class="col-5">
+      <form class="rounded-4 px-5 py-4 col-md-6">
+        <h3 class="text-center">Have an account?</h3>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input required="" type="email" class="form-control" id="email" aria-describedby="emailHelp"
+            placeholder="Email" v-model="email" />
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Password</label>
+          <input required="" type="password" class="form-control" id="password" placeholder="Password"
+            v-model="password" />
+        </div>
+        <button type="button" class="btn text-white" @click="login">
+          Sign in
+        </button>
+
+        <div class="form-text mt-4">
+          <p>
+            Don't have an account yet?
+            <a href="./register.html">Register here!</a>
+          </p>
+        </div>
+      </form>
+    </main>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+  <script src="./index.js"></script>
+</body>
+
 </html>
