--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -16,7 +16,7 @@
     <header>
       <h1 class="text-light text-center">MINDHUB BROTHERS | LOG IN</h1>
     </header>
-    <main class="align-items-center justify-content-evenly mt-5 d-flex flex-wrap ">
+    <main class="align-items-center justify-content-evenly d-flex flex-wrap ">
 
       <img src="./images/log-in.png" alt="log-in" class="col-5">
       <form class="rounded-4 px-5 py-4 col-md-6">
