--- a/src/main/resources/static/web/register.html
+++ b/src/main/resources/static/web/register.html
@@ -17,7 +17,7 @@
     <header>
       <h1 class="text-light text-center">MINDHUB BROTHERS | REGISTER</h1>
     </header>
-    <main class="align-items-center justify-content-evenly mt-5 flex-wrap d-flex">
+    <main class="align-items-center justify-content-evenly flex-wrap d-flex">
       <img src="./images/register.png" alt="register" class="col-4">
       <form class="rounded-4 px-5 py-4 col-md-6">
         <h3 class="text-center">Register your account</h3>
